# DocuMind-AI

./: .env-template.txt  .gitignore  .~lock.DocuMind-AI_Die_Zukunft_des_Qualitätsmanagements (1).odp#  API-BEST-PRACTICES.md  API-DOCUMENTATION-v3.1.0.md  API-DOCUMENTATION.md  API-QUICKSTART.md  BERICHT_KI_QMS_BEREINIGUNG.md  DEPLOYMENT.md  DEVELOPMENT-STANDARDS.md  DOCUMENTATION-CLEANUP-RECOMMENDATIONS.md  DocuMind-AI_Die_Zukunft_des_Qualitätsmanagements (1).odp  LANGCHAIN-PIPELINE-WORKFLOW-v3.1.0.md  NEXT-STEPS-ROADMAP.md  PHASE1-STABILIZATION-PLAN.md  PROJECT_MEMORIES.md  PROVIDER_INTEGRATION_VERBESSERUNGEN.md  PROVIDER_KORREKTUREN.md  PROVIDER_STATUS_FIX.md  QM-WORKFLOW-FEATURES.md  README-SCRIPTS.md  README.md  REPORT_rules.md  UPLOAD_METHODS_IMPLEMENTATION.md  VISION_API_KORREKTUREN.md  VISIO_PNG_FIX.md  VISIO_PNG_SOLUTION.md  VISIO_SYSTEM_READY.md  VISIO_UPLOAD_IMPLEMENTATION.md  WORKFLOW-TESTING-GUIDE.md  WORKFLOW_VERBESSERUNGEN.md  ddd_run.txt  ddd_run_after_schema_fix.txt  ddd_test_output.txt  docker-compose.yml  dokumenten upload schema.odt  env-config-example.txt  env-template.txt  env.docker  legacy_run.txt  (+11 more)
backend/: qms_mvp.db  requirements-dev.txt  requirements.txt  restart_backend.sh
frontend/: README.md  env.example  streamlit_app.py  streamlit_app_new.py
reports/: e2e_audit_samples.json
scripts/: rebuild_qms_db_from_dump.py
tests/: conftest.py
wird_nicht_mehr_benoetigt/: AUSLAGERUNGSPROTOKOLL.md  VISION_OCR_STRATEGIC_PLAN.md  add_document_status_fields.py  add_norm_fields_migration.py  enhanced_ocr_engine.py  fix_missing_user_groups.py  (+8 more)
(+181 files in other folders)
